# Asynchronous-Transaction-Intelligence-Risk-Assessment-Framework

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  REVIEW.md  STRUCTURE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py
app/: main.py
app/api/: deps.py
app/api/routers/: jobs.py
app/core/: config.py  logging_config.py
app/dashboard/: health.py
app/db/: repository.py  session.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: anomaly.py  cleaning.py  llm.py
app/utils/: circuit_breaker.py
app/workers/: celery_app.py  tasks.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md
tests/: conftest.py
tests/unit/: test_all.py  test_anomaly_extra.py  test_llm_extra.py
